--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "hardhat": "^2.26.1"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^5.4.0"
+    "@openzeppelin/contracts": "^5.4.0",
+    "solidity-coverage": "^0.8.16"
   }
 }
