--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.4.0",
+    "dotenv": "^17.2.1",
     "solidity-coverage": "^0.8.16"
   }
 }
